2019年10月14日 星期一 17时32分04秒 CST

--- a/jxhsjxhs.github.io/themes/3-hexo/source/css/_partial/post.styl
+++ b/jxhsjxhs.github.io/themes/3-hexo/source/css/_partial/post.styl
@@ -152,11 +152,13 @@
       .div_img,figure
         margin 0
         padding 10px 0
+        text-align center
       img
-        max-width 100%
-        display block
+        max-width 95%
+        display inline-block
         margin auto
         cursor zoom-in
+        padding 1px
       .img_alt
         text-align center
         span
@@ -178,6 +180,14 @@
           margin-bottom 0px
       p
         margin 0 0 16px
+      .inner-toc
+        border: #e2dede solid 1px;
+        border-radius: 10px;
+        h2
+          border-bottom: none;
+          margin: 10px 20px;
+        ol
+          list-style none
       ol>li
         margin-bottom 10px
         margin-left -9px
