--- a/jxhsjxhs.github.io/themes/3-hexo/layout/_partial/footer.ejs
+++ b/jxhsjxhs.github.io/themes/3-hexo/layout/_partial/footer.ejs
@@ -1,4 +1,4 @@
-<script src="<%=theme.CDN.pjax%>"></script>
+<script src="<%=theme.blog_path?theme.blog_path.lastIndexOf("/") === theme.blog_path.length-1?theme.blog_path.slice(0, theme.blog_path.length-1):theme.blog_path:'' %>/js/jquery.pjax.js?v=<%=theme.version%>" ></script>
 <% if (theme.img_resize == 'photoSwipe') {%>
 <script src="<%=theme.CDN.photoswipe_js%>"></script>
 <script src="<%=theme.CDN.photoswipe_ui_js%>"></script>
@@ -353,6 +353,64 @@
 <%}%>
 <!--自定义样式设置-->
 <style>
+    <%if(theme.category && theme.category.width){%>
+    <%if(theme.category.width.lg){%>
+    .nav {
+        width: <%=(theme.category.width.lg+422)%>px;
+    }
+    .nav.fullscreen {
+        margin-left: -<%=(theme.category.width.lg+422)%>px;
+    }
+    .nav-left {
+        width: <%=theme.category.width.lg%>px;
+    }
+    <%}%>
+    <%if(theme.category.width.md){%>
+    @media screen and (max-width: 1468px) {
+        .nav {
+            width: <%=(theme.category.width.md+392)%>px;
+        }
+        .nav.fullscreen {
+            margin-left: -<%=(theme.category.width.md+392)%>px;
+        }
+        .nav-left {
+            width: <%=theme.category.width.md%>px;
+        }
+    }
+    <%}%>
+    <%if (theme.category.width.sm){%>
+    @media screen and (max-width: 1024px) {
+        .nav {
+            width: <%=theme.category.width.md+392%>px;
+            margin-left: -<%=theme.category.width.md+392%>px
+        }
+        .nav.fullscreen {
+            margin-left: 0;
+        }
+        .nav .hide-list.fullscreen {
+            left: <%=theme.category.width.md?theme.category.width.md+392:492 %>px
+        }
+    }
+    <%}%>
+    @media screen and (max-width: 426px) {
+        .nav {
+            width: 100%;
+        }
+        .nav-left {
+            width: 100%;
+        }
+    }
+    <%}%>
+    <%if(theme.article_list.title){ %>
+    .nav-right .title-list nav a .post-title, .nav-right .title-list #local-search-result a .post-title {
+        color: <%=theme.article_list.title %>;
+    }
+    <%}%>
+    <%if(theme.article_list.datetime){ %>
+    .nav-right .title-list nav a .post-date, .nav-right .title-list #local-search-result a .post-date {
+        color: <%=theme.article_list.datetime %>;
+    }
+    <%}%>
     <%if(theme.article_list.hover.background){%>
     .nav-right nav a.hover, #local-search-result a.hover{
         background-color: <%=theme.article_list.hover.background %>;
@@ -360,7 +418,7 @@
     <%}%>
     <%if(theme.article_list.hover.color){%>
     .nav-right nav a.hover > span{
-        color: <%=theme.article_list.hover.color %>;
+        color: <%=theme.article_list.hover.color %> !important;
     }
     <%}%>
 
@@ -420,8 +478,8 @@
         top: 0;
         width: 100%;
         height: 100%;
-        opacity: 0.1;
-        background: url("<%=theme.article_bg_img.src%>");
+        opacity: <%= typeof theme.article_bg_img.opacity === 'undefined' ? 0.1 : theme.article_bg_img.opacity %>;
+        background: url("<%=theme.blog_path?theme.blog_path.lastIndexOf("/") === theme.blog_path.length-1?theme.blog_path.slice(0, theme.blog_path.length-1):theme.blog_path:'' %><%=theme.article_bg_img.src %>");
         background-repeat: no-repeat;
         background-position: 50% 0;
         -ms-background-size: cover;
